--- a/docs/src/components/page-header/PageHeaderDescription.astro
+++ b/docs/src/components/page-header/PageHeaderDescription.astro
@@ -1,8 +1,7 @@
 ---
-import { cn } from '@/lib/utils';
-
+import { cn } from '@/lib/utils'
 ---
 
 <p class={cn('text-balance max-w-2xl text-lg font-light text-foreground', Astro.props.class)}>
-    <slot />
+  <slot />
 </p>
