--- a/docs/src/components/Navbar.astro
+++ b/docs/src/components/Navbar.astro
@@ -5,34 +5,34 @@ import { cn } from '@/lib/utils'
 import Logo from './Logo.astro'
 
 export type Props = {
-    pathname: string
+  pathname: string
 }
 
 const { pathname } = Astro.props
 ---
 
 <div class="mr-4 hidden md:flex">
-    <a href="/" class="mr-6 flex items-center space-x-2">
-        <Logo class="h-6 w-6" />
-        <span class="hidden font-bold sm:inline-block">{siteConfig.title}</span>
-    </a>
-    <nav class="flex items-center space-x-6 text-sm font-medium">
-        {
-            docsConfig.mainNav.map(item => (
-                <a
-                  href={item.href}
-                  class={cn(
-                        'transition-colors hover:text-foreground/80',
-                        pathname === item.href
-                        || (item.href === '/docs/components/accordion' && pathname.startsWith('/docs/components'))
-                        || (item.href === '/examples/cards' && pathname.startsWith('/examples'))
-                            ? 'text-foreground'
-                            : 'opacity-60',
-                    )}
-                >
-                    {item.title}
-                </a>
-            ))
-        }
-    </nav>
+  <a href="/" class="mr-6 flex items-center space-x-2">
+    <Logo class="h-6 w-6" />
+    <span class="hidden font-bold sm:inline-block">{siteConfig.title}</span>
+  </a>
+  <nav class="flex items-center space-x-6 text-sm font-medium">
+    {
+      docsConfig.mainNav.map((item) => (
+        <a
+          href={item.href}
+          class={cn(
+            'transition-colors hover:text-foreground/80',
+            pathname === item.href ||
+              (item.href === '/docs/components/accordion' && pathname.startsWith('/docs/components')) ||
+              (item.href === '/examples/cards' && pathname.startsWith('/examples'))
+              ? 'text-foreground'
+              : 'opacity-60',
+          )}
+        >
+          {item.title}
+        </a>
+      ))
+    }
+  </nav>
 </div>
