--- a/docs/src/components/PageNavigation.astro
+++ b/docs/src/components/PageNavigation.astro
@@ -6,59 +6,68 @@ import { buttonVariants } from '@/registry/new-york/ui/button'
 const { pathname } = Astro.url
 
 function flatten(links: TNavItemWithChildren[]): TNavItem[] {
-    return links
-        .reduce<TNavItem[]>((flat, link) => {
-            return flat.concat(link.items?.length ? flatten(link.items) : link)
-        }, [])
-        .filter(link => !link?.disabled)
+  return links
+    .reduce<TNavItem[]>((flat, link) => {
+      return flat.concat(link.items?.length ? flatten(link.items) : link)
+    }, [])
+    .filter((link) => !link?.disabled)
 }
 
 function getPagerForDoc(slug: string) {
-    const flattenedLinks = [null, ...flatten(docsConfig.sidebarNav), null]
-    let activeIndex: number
-    if (!slug) {
-        activeIndex = 1
-    }
- else {
-        activeIndex = flattenedLinks.findIndex(link => `${slug}` === link?.href)
-    }
+  const flattenedLinks = [null, ...flatten(docsConfig.sidebarNav), null]
+  let activeIndex: number
+  if (!slug) {
+    activeIndex = 1
+  } else {
+    activeIndex = flattenedLinks.findIndex((link) => `${slug}` === link?.href)
+  }
 
-    const prev = activeIndex !== 0 ? flattenedLinks[activeIndex - 1] : null
-    const next = activeIndex !== flattenedLinks.length - 1 ? flattenedLinks[activeIndex + 1] : null
-    return {
-        prev,
-        next,
-    }
+  const prev = activeIndex !== 0 ? flattenedLinks[activeIndex - 1] : null
+  const next = activeIndex !== flattenedLinks.length - 1 ? flattenedLinks[activeIndex + 1] : null
+  return {
+    prev,
+    next,
+  }
 }
 
 const pager = getPagerForDoc(pathname)
 ---
 
 <div class="flex flex-row items-center justify-between">
-    {
-        pager.prev?.href
-? (
-            <a class={buttonVariants({ variant: 'outline' })} href={pager.prev?.href}>
-                <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-4 w-4" viewBox="0 0 24 24">
-                    <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 6l-6 6l6 6" />
-                    <title>Previous page</title>
-                </svg>
-                {pager.prev.title}
-            </a>
-        )
-: null
-    }
-    {
-        pager.next?.href
-? (
-            <a class={cn(buttonVariants({ variant: 'outline' }), 'ml-auto')} href={pager.next?.href}>
-                {pager.next.title}
-                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 h-4 w-4" viewBox="0 0 24 24">
-                    <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 6l6 6l-6 6" />
-                    <title>Next page</title>
-                </svg>
-            </a>
-        )
-: null
-    }
+  {
+    pager.prev?.href ? (
+      <a class={buttonVariants({ variant: 'outline' })} href={pager.prev?.href}>
+        <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-4 w-4" viewBox="0 0 24 24">
+          <path
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m15 6l-6 6l6 6"
+          />
+          <title>Previous page</title>
+        </svg>
+        {pager.prev.title}
+      </a>
+    ) : null
+  }
+  {
+    pager.next?.href ? (
+      <a class={cn(buttonVariants({ variant: 'outline' }), 'ml-auto')} href={pager.next?.href}>
+        {pager.next.title}
+        <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 h-4 w-4" viewBox="0 0 24 24">
+          <path
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m9 6l6 6l-6 6"
+          />
+          <title>Next page</title>
+        </svg>
+      </a>
+    ) : null
+  }
 </div>
