--- a/docs/src/components/mdx/linked-card.astro
+++ b/docs/src/components/mdx/linked-card.astro
@@ -4,6 +4,12 @@ import { cn } from '@/lib/utils'
 const { class: className, ...props } = Astro.props
 ---
 
-<a class={cn('flex w-full flex-col items-center rounded-xl border bg-card p-6 text-card-foreground shadow transition-colors hover:bg-muted/50 sm:p-10', className)} {...props}>
-    <slot />
+<a
+  class={cn(
+    'flex w-full flex-col items-center rounded-xl border bg-card p-6 text-card-foreground shadow transition-colors hover:bg-muted/50 sm:p-10',
+    className,
+  )}
+  {...props}
+>
+  <slot />
 </a>
