--- a/docs/src/components/page-header/PageHeader.astro
+++ b/docs/src/components/page-header/PageHeader.astro
@@ -2,6 +2,8 @@
 import { cn } from '@/lib/utils'
 ---
 
-<section class={cn('mx-auto flex flex-col items-start gap-2 px-4 py-8 md:py-12 md:pb-8 lg:py-12 lg:pb-10', Astro.props.class)}>
-    <slot />
+<section
+  class={cn('mx-auto flex flex-col items-start gap-2 px-4 py-8 md:py-12 md:pb-8 lg:py-12 lg:pb-10', Astro.props.class)}
+>
+  <slot />
 </section>
