--- a/docs/src/components/tabs/TabsList.astro
+++ b/docs/src/components/tabs/TabsList.astro
@@ -2,6 +2,12 @@
 import { cn } from '@/lib/utils'
 ---
 
-<div class={cn('inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground', 'w-full justify-start rounded-none border-b bg-transparent p-0', Astro.props.class)}>
-    <slot />
+<div
+  class={cn(
+    'inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground',
+    'w-full justify-start rounded-none border-b bg-transparent p-0',
+    Astro.props.class,
+  )}
+>
+  <slot />
 </div>
