--- a/docs/src/layouts/DocsLayout.astro
+++ b/docs/src/layouts/DocsLayout.astro
@@ -11,7 +11,7 @@ import type { CollectionEntry } from 'astro:content'
 import RootLayout from './RootLayout.astro'
 
 export type Props = {
-    entry: CollectionEntry<'docs'>
+  entry: CollectionEntry<'docs'>
 }
 
 const { entry } = Astro.props
@@ -20,111 +20,111 @@ const { pathname } = Astro.url
 ---
 
 <RootLayout title={entry.data.title} description={entry.data.description} url={siteConfig.url + Astro.url.pathname}>
-    <div class="border-b">
-        <div class="container flex-1 items-start md:grid md:grid-cols-[220px_minmax(0,1fr)] md:gap-6 lg:grid-cols-[240px_minmax(0,1fr)] lg:gap-10">
-            <aside class="fixed top-14 z-30 -ml-2 hidden h-[calc(100vh-3.5rem)] w-full shrink-0 md:sticky md:block">
-                <div class="relative h-full overflow-y-auto py-6 pr-6 lg:py-8">
-                    <Sidebar pathname={pathname} />
-                </div>
-            </aside>
-            <main class="relative py-6 lg:gap-10 lg:py-8 xl:grid xl:grid-cols-[1fr_300px]">
-                <div class="mx-auto w-full min-w-0">
-                    <div class="mb-4 flex items-center space-x-1 text-sm leading-none text-muted-foreground">
-                        <div class="truncate">Docs</div>
-                        <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-3.5 w-3.5">
-                            <path
-                              d="M6.1584 3.13508C6.35985 2.94621 6.67627 2.95642 6.86514 3.15788L10.6151 7.15788C10.7954 7.3502 10.7954 7.64949 10.6151 7.84182L6.86514 11.8418C6.67627 12.0433 6.35985 12.0535 6.1584 11.8646C5.95694 11.6757 5.94673 11.3593 6.1356 11.1579L9.565 7.49985L6.1356 3.84182C5.94673 3.64036 5.95694 3.32394 6.1584 3.13508Z"
-                              fill="currentColor"
-                              fill-rule="evenodd"
-                              clip-rule="evenodd"
-                            ></path>
-                        </svg>
-                        <div class="text-foreground">{entry.data.title}</div>
-                    </div>
-                    <div class="space-y-2">
-                        <h1 class="scroll-m-20 text-3xl font-bold tracking-tight">
-                            {entry.data.title}
-                        </h1>
-                        {
-                            entry.data.description
-? (
-                                <p class="text-base text-muted-foreground">
-                                    <span class="text-balance">{entry.data.description}</span>
-                                </p>
-                            )
-: null
-                        }
-                    </div>
-                    {
-                        entry.data.links
-? (
-                            <div class="flex items-center space-x-2 pt-4">
-                                {entry.data.links.doc
-? (
-                                    <a
-                                      href={entry.data.links.doc}
-                                      target="_blank"
-                                      rel="noreferrer"
-                                      class={badgeVariants({
-                                            variant: 'secondary',
-                                        })}
-                                    >
-                                        Docs
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-3 w-3" viewBox="0 0 24 24">
-                                            <path
-                                              fill="none"
-                                              stroke="currentColor"
-                                              stroke-linecap="round"
-                                              stroke-linejoin="round"
-                                              stroke-width="2"
-                                              d="M12 6H6a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-6m-7 1l9-9m-5 0h5v5"
-                                            />
-                                        </svg>
-                                    </a>
-                                )
-: null}
-                                {entry.data.links.api
-? (
-                                    <a
-                                      href={entry.data.links.api}
-                                      target="_blank"
-                                      rel="noreferrer"
-                                      class={badgeVariants({
-                                            variant: 'secondary',
-                                        })}
-                                    >
-                                        API Reference{' '}
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-3 w-3" viewBox="0 0 24 24">
-                                            <path
-                                              fill="none"
-                                              stroke="currentColor"
-                                              stroke-linecap="round"
-                                              stroke-linejoin="round"
-                                              stroke-width="2"
-                                              d="M12 6H6a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-6m-7 1l9-9m-5 0h5v5"
-                                            />
-                                        </svg>
-                                    </a>
-                                )
-: null}
-                            </div>
-                        )
-: null
-                    }
-                    <div class="pb-12 pt-8">
-                        <slot />
-                    </div>
-                    <PageNavigation />
-                </div>
-
-                <div class="hidden text-sm xl:block">
-                    <div class="sticky top-16 -mt-10 h-[calc(100vh-3.5rem)] overflow-hidden pt-6">
-                        <div class="h-full pb-10">
-                            <Toc data={headings} />
-                        </div>
-                    </div>
-                </div>
-            </main>
+  <div class="border-b">
+    <div
+      class="container flex-1 items-start md:grid md:grid-cols-[220px_minmax(0,1fr)] md:gap-6 lg:grid-cols-[240px_minmax(0,1fr)] lg:gap-10"
+    >
+      <aside class="fixed top-14 z-30 -ml-2 hidden h-[calc(100vh-3.5rem)] w-full shrink-0 md:sticky md:block">
+        <div class="relative h-full overflow-y-auto py-6 pr-6 lg:py-8">
+          <Sidebar pathname={pathname} />
         </div>
+      </aside>
+      <main class="relative py-6 lg:gap-10 lg:py-8 xl:grid xl:grid-cols-[1fr_300px]">
+        <div class="mx-auto w-full min-w-0">
+          <div class="mb-4 flex items-center space-x-1 text-sm leading-none text-muted-foreground">
+            <div class="truncate">Docs</div>
+            <svg
+              width="15"
+              height="15"
+              viewBox="0 0 15 15"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-3.5 w-3.5"
+            >
+              <path
+                d="M6.1584 3.13508C6.35985 2.94621 6.67627 2.95642 6.86514 3.15788L10.6151 7.15788C10.7954 7.3502 10.7954 7.64949 10.6151 7.84182L6.86514 11.8418C6.67627 12.0433 6.35985 12.0535 6.1584 11.8646C5.95694 11.6757 5.94673 11.3593 6.1356 11.1579L9.565 7.49985L6.1356 3.84182C5.94673 3.64036 5.95694 3.32394 6.1584 3.13508Z"
+                fill="currentColor"
+                fill-rule="evenodd"
+                clip-rule="evenodd"></path>
+            </svg>
+            <div class="text-foreground">{entry.data.title}</div>
+          </div>
+          <div class="space-y-2">
+            <h1 class="scroll-m-20 text-3xl font-bold tracking-tight">
+              {entry.data.title}
+            </h1>
+            {
+              entry.data.description ? (
+                <p class="text-base text-muted-foreground">
+                  <span class="text-balance">{entry.data.description}</span>
+                </p>
+              ) : null
+            }
+          </div>
+          {
+            entry.data.links ? (
+              <div class="flex items-center space-x-2 pt-4">
+                {entry.data.links.doc ? (
+                  <a
+                    href={entry.data.links.doc}
+                    target="_blank"
+                    rel="noreferrer"
+                    class={badgeVariants({
+                      variant: 'secondary',
+                    })}
+                  >
+                    Docs
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-3 w-3" viewBox="0 0 24 24">
+                      <path
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M12 6H6a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-6m-7 1l9-9m-5 0h5v5"
+                      />
+                    </svg>
+                  </a>
+                ) : null}
+                {entry.data.links.api ? (
+                  <a
+                    href={entry.data.links.api}
+                    target="_blank"
+                    rel="noreferrer"
+                    class={badgeVariants({
+                      variant: 'secondary',
+                    })}
+                  >
+                    API Reference{' '}
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-3 w-3" viewBox="0 0 24 24">
+                      <path
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M12 6H6a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-6m-7 1l9-9m-5 0h5v5"
+                      />
+                    </svg>
+                  </a>
+                ) : null}
+              </div>
+            ) : null
+          }
+          <div class="pb-12 pt-8">
+            <slot />
+          </div>
+          <PageNavigation />
+        </div>
+
+        <div class="hidden text-sm xl:block">
+          <div class="sticky top-16 -mt-10 h-[calc(100vh-3.5rem)] overflow-hidden pt-6">
+            <div class="h-full pb-10">
+              <Toc data={headings} />
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
+  </div>
 </RootLayout>
