--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -9,32 +9,34 @@ import { buttonVariants } from '@/registry/new-york/ui/button'
 ---
 
 <RootLayout>
-    <div class="container relative">
-        <PageHeader>
-            <PageHeaderHeading>Build your component library</PageHeaderHeading>
-            <PageHeaderDescription> Beautifully designed components that you can copy and paste into your apps. </PageHeaderDescription>
+  <div class="container relative">
+    <PageHeader>
+      <PageHeaderHeading>Build your component library</PageHeaderHeading>
+      <PageHeaderDescription>
+        Beautifully designed components that you can copy and paste into your apps.
+      </PageHeaderDescription>
 
-            <PageActions>
-                <a
-                  href="/docs"
-                  class={buttonVariants({
-                        size: 'sm',
-                    })}
-                >
-                    Get Started
-                </a>
-                <a
-                  target="_blank"
-                  rel="noreferrer"
-                  href={siteConfig.links.github}
-                  class={buttonVariants({
-                        size: 'sm',
-                        variant: 'ghost',
-                    })}
-                >
-                    GitHub
-                </a>
-            </PageActions>
-        </PageHeader>
-    </div>
+      <PageActions>
+        <a
+          href="/docs"
+          class={buttonVariants({
+            size: 'sm',
+          })}
+        >
+          Get Started
+        </a>
+        <a
+          target="_blank"
+          rel="noreferrer"
+          href={siteConfig.links.github}
+          class={buttonVariants({
+            size: 'sm',
+            variant: 'ghost',
+          })}
+        >
+          GitHub
+        </a>
+      </PageActions>
+    </PageHeader>
+  </div>
 </RootLayout>
