--- a/docs/src/components/component-preview/ComponentSource.astro
+++ b/docs/src/components/component-preview/ComponentSource.astro
@@ -54,7 +54,7 @@ const allComponents = componentUi?.files?.flatMap((file) => {
           <div class="relative">
             <CodeAstro
               code={code}
-              lang="ts"
+              lang="angular-ts"
               theme="github-dark-default"
               class="mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900 px-4"
             />
