--- a/docs/src/components/component-preview/RawCode.astro
+++ b/docs/src/components/component-preview/RawCode.astro
@@ -13,7 +13,7 @@ const { code } = Astro.props
 <div data-raw-code class="relative">
   <CodeAstro
     code={code}
-    lang="ts"
+    lang="angular-ts"
     theme="github-dark-default"
     class="mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900 px-4"
   />
