--- a/docs/src/components/component-preview/ComponentSource.astro
+++ b/docs/src/components/component-preview/ComponentSource.astro
@@ -55,7 +55,7 @@ const allComponents = componentUi?.files?.flatMap((file) => {
             <CodeAstro
               code={code}
               lang="angular-ts"
-              theme="github-dark-default"
+              theme="github-dark"
               class="mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900 px-4"
             />
             <CopyButton client:load {...{ rawString: code, withMeta: false }} />
