--- a/docs/src/layouts/RootLayout.astro
+++ b/docs/src/layouts/RootLayout.astro
@@ -5,6 +5,7 @@ import Header from '@/components/Header.astro'
 import { siteConfig } from '@/config/site'
 
 import './main.css'
+import './mdx.css'
 
 type Props = {
   title?: string
