--- a/docs/src/components/Toc.astro
+++ b/docs/src/components/Toc.astro
@@ -1,13 +1,12 @@
 ---
-import { cn } from '@/lib/utils'
-import type { MarkdownHeading } from 'astro'
+import type { TableOfContents } from '@/lib/toc'
+import Tree from './Tree.astro'
 
 type Props = {
-  data: MarkdownHeading[]
+  toc: TableOfContents
 }
 
-const { data } = Astro.props
-const { pathname } = Astro.url
+const { toc } = Astro.props
 ---
 
 <script>
@@ -50,20 +49,6 @@ const { pathname } = Astro.url
 <aside class="space-y-2">
   <p class="font-medium">On This Page</p>
   <ul class="m-0 list-none">
-    {
-      data.map((h) => (
-        <li class={cn('mt-0 pt-2', h.depth === 3 && 'pl-4')}>
-          <a
-            href={`${pathname}#${h.slug}`}
-            class={cn(
-              'inline-block no-underline transition-colors hover:text-foreground text-muted-foreground',
-              '[&.active-toc-item]:font-medium [&.active-toc-item]:text-foreground',
-            )}
-          >
-            {h.text}
-          </a>
-        </li>
-      ))
-    }
+    <Tree tree={toc} />
   </ul>
 </aside>
