--- a/docs/src/components/mdx/pre.astro
+++ b/docs/src/components/mdx/pre.astro
@@ -1,18 +1,28 @@
 ---
 import { cn } from '@/lib/utils'
-import { CopyButton } from '../copy-button'
+import { CopyButton, CopyNpmCommandButtonComponent } from '../copy-button'
 // import PackageManagerCopyButton from "../package-manager-copy-button";
 
 type Props = {
-  rawString: string
-  npmCommand: string
-  yarnCommand: string
-  pnpmCommand: string
-  withMeta: boolean
+  __rawString__: string
+  __npmCommand__: string
+  __yarnCommand__: string
+  __pnpmCommand__: string
+  __bunCommand__: string
+  __withMeta__: boolean
   class?: string
 }
 
-const { rawString, npmCommand, pnpmCommand, yarnCommand, withMeta, class: className, ...rest } = Astro.props
+const {
+  __rawString__,
+  __npmCommand__,
+  __pnpmCommand__,
+  __yarnCommand__,
+  __bunCommand__,
+  __withMeta__,
+  class: className,
+  ...rest
+} = Astro.props
 ---
 
 <div class="relative">
@@ -24,19 +34,33 @@ const { rawString, npmCommand, pnpmCommand, yarnCommand, withMeta, class: classN
     {...rest}><slot /></pre>
 
   {
-    rawString && !npmCommand ? (
+    __rawString__ && !__npmCommand__ ? (
       <CopyButton
-        {...{ rawString, withMeta, class: cn('absolute right-4 top-4', withMeta && 'top-16') }}
+        {...{
+          rawString: __rawString__,
+          withMeta: __withMeta__,
+          class: cn('absolute right-4 top-4', __withMeta__ && 'top-16'),
+        }}
         client:visible
       />
     ) : null
   }
 
   {
-    npmCommand && yarnCommand && pnpmCommand ? (
-      <div>
-        {/* <PackageManagerCopyButton npmCommand={npmCommand} yarnCommand={yarnCommand} pnpmCommand={pnpmCommand} /> */}
-      </div>
+    __npmCommand__ && __yarnCommand__ && __pnpmCommand__ && __bunCommand__ ? (
+      <CopyNpmCommandButtonComponent
+        {...{
+          commands: {
+            __npmCommand__,
+            __yarnCommand__,
+            __pnpmCommand__,
+            __bunCommand__,
+          },
+          withMeta: __withMeta__,
+          class: cn('absolute right-4 top-4', __withMeta__ && 'top-16'),
+        }}
+        client:visible
+      />
     ) : null
   }
 </div>
