docs: fix layout

--- a/docs/src/components/mdx/li.astro
+++ b/docs/src/components/mdx/li.astro
@@ -1,7 +1,7 @@
 ---
 import { cn } from '@/lib/utils'
 
-const { class: className, ...props } = Astro.props
+const { className, ...props } = Astro.props
 ---
 
 <li class={cn('mt-2', className)} {...props}>
