--- a/docs/src/components/mdx/a.astro
+++ b/docs/src/components/mdx/a.astro
@@ -1,7 +1,7 @@
 ---
 import { cn } from '@/lib/utils'
 
-const { class: className, ...props } = Astro.props
+const { className, ...props } = Astro.props
 ---
 
 <a class={cn('font-medium underline underline-offset-4', className)} {...props}><slot /></a>
