--- a/docs/src/components/mdx/blockquote.astro
+++ b/docs/src/components/mdx/blockquote.astro
@@ -1,7 +1,7 @@
 ---
 import { cn } from '@/lib/utils'
 
-const { class: className, ...props } = Astro.props
+const { className, ...props } = Astro.props
 ---
 
 <blockquote class={cn('mt-6 border-l-2 pl-6 italic', className)} {...props}>
