--- a/docs/src/components/mdx/h1.astro
+++ b/docs/src/components/mdx/h1.astro
@@ -1,7 +1,7 @@
 ---
 import { cn } from '@/lib/utils'
 
-const { class: className, ...props } = Astro.props
+const { className, ...props } = Astro.props
 ---
 
 <h1 class={cn('font-heading mt-2 scroll-m-20 text-4xl font-bold', className)} {...props}>
