--- a/docs/src/components/mdx/h2.astro
+++ b/docs/src/components/mdx/h2.astro
@@ -1,7 +1,7 @@
 ---
 import { cn } from '@/lib/utils'
 
-const { class: className, ...props } = Astro.props
+const { className, ...props } = Astro.props
 ---
 
 <h2
