--- a/docs/src/components/mdx/img.astro
+++ b/docs/src/components/mdx/img.astro
@@ -1,7 +1,7 @@
 ---
 import { cn } from '@/lib/utils'
 
-const { class: className, alt, ...props } = Astro.props
+const { className, alt, ...props } = Astro.props
 ---
 
 <img class={cn('rounded-md', className)} alt={alt} {...props} />
