--- a/docs/src/components/component-preview/RawCode.astro
+++ b/docs/src/components/component-preview/RawCode.astro
@@ -1,7 +1,8 @@
 ---
 import { Code as CodeAstro } from 'astro/components'
 
-import { CopyButton } from '../copy-button'
+import CopyButton from '../CopyButton.astro'
+import { cn } from '@/lib/utils'
 
 export interface Props {
   code: string
@@ -17,5 +18,5 @@ const { code } = Astro.props
     theme="github-dark"
     class="mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900 px-4"
   />
-  <CopyButton client:load {...{ rawString: code, withMeta: false }} />
+  <CopyButton value={code} class={cn('absolute right-4 top-4')} />
 </div>
